@@ -343,7 +343,7 @@ if ($newcluster && -e '/etc/postgresql-common/root.crt') {
 
 # start it if requested
 if ($start) {
-    system '/usr/bin/pg_ctlcluster', '-s', $version, $cluster, 'start';
+    system '/usr/bin/pg_ctlcluster', $version, $cluster, 'start';
 }
 
 __END__
