@@ -31,15 +31,15 @@ ok ((system "pg_createcluster --socketdir '$socketdir' $version main >/dev/null"
 
 # chown cluster to an invalid user to test error
 (system "chown -R 99 /var/lib/postgresql/$version/main") == 0 or die "chown failed: $!";
-is ((system "pg_ctlcluster -s $version main start 2>/dev/null"), 256,
+is ((system "pg_ctlcluster $version main start 2>/dev/null"), 256,
     'pg_ctlcluster fails on invalid cluster owner uid');
 (system "chown -R postgres:99 /var/lib/postgresql/$version/main") == 0 or die "chown failed: $!";
-is ((system "pg_ctlcluster -s $version main start 2>/dev/null"), 256,
+is ((system "pg_ctlcluster $version main start 2>/dev/null"), 256,
     'pg_ctlcluster as root fails on invalid cluster owner gid');
 is ((exec_as 'postgres', "pg_ctlcluster $version main start"), 1,
     'pg_ctlcluster as postgres fails on invalid cluster owner gid');
 (system "chown -R postgres:postgres /var/lib/postgresql/$version/main") == 0 or die "chown failed: $!";
-is ((system "pg_ctlcluster -s $version main start"), 0,
+is ((system "pg_ctlcluster $version main start"), 0,
     'pg_ctlcluster succeeds on valid cluster owner uid/gid');
 
 # check socket
@@ -47,7 +47,7 @@ ok_dir '/var/run/postgresql', [], 'No sockets in /var/run/postgresql';
 ok_dir $socketdir, ['.s.PGSQL.5432', '.s.PGSQL.5432.lock'], "Socket is in $socketdir";
 
 # stop cluster, check sockets
-ok ((system "pg_ctlcluster -s $version main stop") == 0,
+ok ((system "pg_ctlcluster $version main stop") == 0,
     'cluster stops after removing unix_socket_dir');
 ok_dir $socketdir, [], "No sockets in $socketdir after stopping cluster";
 
@@ -62,7 +62,7 @@ truncate F, 0;
 print F @lines;
 close F;
 
-ok ((system "pg_ctlcluster -s $version main start") == 0,
+ok ((system "pg_ctlcluster $version main start") == 0,
     'cluster starts after removing unix_socket_dir');
 ok_dir '/var/run/postgresql', ['.s.PGSQL.5432', '.s.PGSQL.5432.lock'], 
     'Socket is in default dir /var/run/postgresql';
